fix: replace deprecated URL(String) constructor with URI.create().toURL()
- Fix deprecated URL constructor in WebService, SeleniumWebDriver, ISelenium
- Add URI imports where needed
- Replace new URL(url) with URI.create(url).toURL()

Progress: 99 -> ~90 issues